# jesh-chatbox-python

./: README.md  pyproject.toml
app/: config.py  main.py  models.py
app/api/: routes.py
app/services/: ai_client.py
app/static/: app.js  styles.css
app/templates/: index.html
tests/: test_ai_client.py
